--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,23 @@
                 </span>
             </div>
         </div>
-    </nav>
 
-    <main class="flex-shrink-0 main-bg">
+        </nav>
+        <!-- displaying Django messages -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    {% for message in messages %}
+                    <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                        {{ message | safe }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
+        <main class="flex-shrink-0 main-bg">
 
 
     {% if user.is_authenticated %}
